# filark

./: .gitignore  README.md  TODO  pyproject.toml
filark/gui/: app.py  display_model.py  main_window.py
filark/gui/modules/: analysis.py  annotation.py  dialogs.py  load.py  visuals.py
filark/gui/widgets/: sliding_drawer.py
filark/io/: fileset.py  streaming.py  tapeio.py
filark/viz/: camera.py  canvas.py
